# parallel-indexing-tbb

./: CMakeLists.txt  main.cpp
include/conf_handler/: confhandler.h
include/word_counting_functions/: word_counting_functions.h
src/conf_handler/: confhandler.cpp
src/word_counting_functions/: word_counting_functions.cpp
